--- a/index.html
+++ b/index.html
@@ -5,42 +5,47 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="style.css">
-	<title>Document</title>
+	<title>Popular Food Items</title>
 </head>
 <body>
 	<div class="container">
+		
 		<div class="header">
 			<div class="top-header">
 				<p>Logo</p>
 				<ul>
-					<li>Link1</li>
-					<li>Link2</li>
-					<li>Link3</li>
+					<li><a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwiavdKU6qWAAxXAlGoFHSceA6gQFnoECBYQAQ&url=https%3A%2F%2Fwww.allrecipes.com%2F&usg=AOvVaw06eF4VXqNhtMYU2xA_2WL8&opi=89978449">Allrecipes</a></li>
+					<li><a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwiavdKU6qWAAxXAlGoFHSceA6gQFnoECBQQAQ&url=https%3A%2F%2Fwww.simplyrecipes.com%2F&usg=AOvVaw0pAWVXi5KrBI9wcEv47Uiv&opi=89978449">Epicurious</a></li>
+					<li><a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwiavdKU6qWAAxXAlGoFHSceA6gQFnoECBMQAQ&url=https%3A%2F%2Fwww.epicurious.com%2F&usg=AOvVaw0yNOzCrbyp-atOW2QZbbkq&opi=89978449">Simply-Recipes</a></li>
 				</ul>
 			</div>
 			<div class="introduction"></div>
 		</div>
+		
 		<div class="recipes">
 			<h1>Popular Foods</h1>
 			<div class="images">
 				<ul>
-					<li>Cheeseburgers</li>
-					<li>Pizza</li>
-					<li>French Fries</li>
-					<li>Chicken</li>
+					<li><img src=".img/food/burger.jpg" alt="Burger"></li>
+					<li><img src=".img/food/pizza.jpg" alt="Pizza"></li>
+					<li><img src=".img/food/burger.jpg" alt="Fries"></li>
+					<li><img src=".img/food/burger.jpg" alt="Chicken"></li>
 				</ul>
 			</div>
 		</div>
+		
 		<div class="quotes">
 			<h1>Inspirational Quote</h1>
 			<div class="actual-quote">
-				<p>No one is born a great cook, one learns by doing.</p>
-				<p>-Julia Child</p>
+				<p id="said-quote">No one is born a great cook, one learns by doing.</p>
+				<p id="person">-Julia Child</p>
 			</div>
 		</div>
+		
 		<div class="footer">
 
 		</div>
+
 	</div>
 </body>
 </html>
