--- a/index.html
+++ b/index.html
@@ -25,12 +25,10 @@
 		<div class="recipes">
 			<h1>Popular Foods</h1>
 			<div class="images">
-				<ul>
-					<li><img src=".img/food/burger.jpg" alt="Burger"></li>
-					<li><img src=".img/food/pizza.jpg" alt="Pizza"></li>
-					<li><img src=".img/food/burger.jpg" alt="Fries"></li>
-					<li><img src=".img/food/burger.jpg" alt="Chicken"></li>
-				</ul>
+				<img id="burger" src="img/food/burger.jpg" alt="Burger">
+				<img id="pizza" src="img/food/pizza.jpg" alt="Pizza">
+				<img id="fries"src="img/food/fries.jpg" alt="Fries">
+				<img id="chicken" src="img/food/chicken.jpg" alt="Chicken">
 			</div>
 		</div>
 		
