--- a/index.html
+++ b/index.html
@@ -19,29 +19,43 @@
 					<li><a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwiavdKU6qWAAxXAlGoFHSceA6gQFnoECBMQAQ&url=https%3A%2F%2Fwww.epicurious.com%2F&usg=AOvVaw0yNOzCrbyp-atOW2QZbbkq&opi=89978449">Simply-Recipes</a></li>
 				</ul>
 			</div>
-			<div class="introduction"></div>
+			<div class="introduction">
+				<img src="./img/veggies.jpg" alt="Food">
+			</div>
 		</div>
 		
 		<div class="recipes">
 			<h1>Popular Foods</h1>
 			<div class="images">
-				<img id="burger" src="img/food/burger.jpg" alt="Burger">
-				<img id="pizza" src="img/food/pizza.jpg" alt="Pizza">
-				<img id="fries"src="img/food/fries.jpg" alt="Fries">
-				<img id="chicken" src="img/food/chicken.jpg" alt="Chicken">
+				<div>
+					<img id="burger" src="img/food/burger.jpg" alt="Burger">
+					<p>Burger</p>
+				</div>
+				<div>
+					<img id="pizza" src="img/food/pizza.jpg" alt="Pizza">
+					<p>Pizza</p>
+				</div>
+				<div>
+					<img id="fries"src="img/food/fries.jpg" alt="Fries">
+					<p>Fries</p>
+				</div>
+				<div>
+					<img id="chicken" src="img/food/chicken.jpg" alt="Chicken">
+					<p>Chicken</p>
+				</div>
 			</div>
 		</div>
 		
 		<div class="quotes">
 			<h1>Inspirational Quote</h1>
 			<div class="actual-quote">
-				<p id="said-quote">No one is born a great cook, one learns by doing.</p>
+				<p id="said-quote"><i>"No one is born a great cook, one learns by doing."</i></p>
 				<p id="person">-Julia Child</p>
 			</div>
 		</div>
 		
 		<div class="footer">
-
+			<p>Happy Cooking!</p>
 		</div>
 
 	</div>
